output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_810.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_810.py", line 127
    /* pos[0] == 6 */ durations[6]))))))
    ^
SyntaxError: invalid syntax
